<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Prateek Srivastava (@f2prateek)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/menu_checkbox_glare"
      android:title="@string/glare_preference"
      android:showAsAction="never"
      android:checkable="true"/>

  <item android:id="@+id/menu_checkbox_shadow"
      android:title="@string/shadow_preference"
      android:showAsAction="never"
      android:checkable="true"/>

  <item android:id="@+id/menu_checkbox_blur_background"
      android:title="@string/blur_background_preference"
      android:showAsAction="never"
      android:checkable="true"/>

  <item android:id="@+id/menu_checkbox_color_background"
      android:title="@string/color_background_preference"
      android:showAsAction="never"
      android:checkable="true"/>

  <item android:id="@+id/menu_match_device"
      android:title="@string/match_device"
      android:showAsAction="never"/>

  <item android:id="@+id/menu_about"
      android:icon="@drawable/ic_action_info"
      android:title="@string/about"
      android:showAsAction="never"/>

</menu>