<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Prateek Srivastava (@f2prateek)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:padding="16dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.f2prateek.dfg.ui.widgets.ForegroundImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:src="@drawable/app_icon_256"
        android:foreground="?android:selectableItemBackground"
        android:scaleType="fitCenter"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        style="@style/AboutText.Header"/>

    <TextView android:id="@+id/tv_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AboutText.Clickable"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        style="@style/AboutText.Header"/>

    <TextView android:id="@+id/tv_gplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gplus_profile"
        style="@style/AboutText.Clickable"/>

    <TextView android:id="@+id/tv_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        style="@style/AboutText.Clickable"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        style="@style/AboutText.Header"/>

    <TextView android:id="@+id/tv_designer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taylor_ling"
        style="@style/AboutText.Clickable"/>

  </LinearLayout>

</ScrollView>